44 minutes into video:

--- a/index.html
+++ b/index.html
@@ -9,6 +9,52 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <header>
+    <h1>Code Business</h1>
+    <span>Our Business is Code</span>
+</header>
+<main>
+    <section id ="aboutUs">
+        <h2>About Us</h2>
+        <p>Sea of Tranquility Orion's sword stirred by starlight the sky calls to us Hypatia explorations. Realm of the galaxies Rig Veda paroxysm of global death made in the interiors of collapsing stars realm of the galaxies vastness is bearable only through love? Take root and flourish are creatures of the cosmos muse about something incredible is waiting to be known made in the interiors of collapsing stars are creatures of the cosmos.</p>
+    </section>
+    <section id ="ourProducts">
+        <h2>Our Products</h2>
+        <p>Kindling the energy hidden in matter rich in mystery courage of our questions realm of the galaxies star stuff harvesting star light tingling of the spine? Bits of moving fluff the carbon in our apple pies stirred by starlight Rig Veda muse about a very small stage in a vast cosmic arena. A very small stage in a vast cosmic arena the sky calls to us inconspicuous motes of rock and gas concept of the number one invent the universe take root and flourish.</p>
+    <div id ="product">
+        <article>
+            <h3>Product A</h3>
+            <img src="images\astronomy-3071312_960_720.jpg">
+            <p>Star stuff harvesting star light hundreds of thousands not a sunrise but a galaxyrise a mote of dust suspended in a sunbeam Sea of Tranquility rich in heavy atoms. </p>
+    </article>
+    <article>
+        <h3>Product B</h3>
+        <img src="images\outerSpace.jpg">
+        <p>Extraordinary claims require extraordinary evidence muse about across the centuries with pretty stories for which there's little good evidence rich in mystery not a sunrise but a galaxyrise.</p>
+    </article>
+    <article>
+        <h3>Product C</h3>
+        <image src="images\solarSystem.jpg">
+            <p>Dream of the mind's eye Euclid Cambrian explosion a billion trillion extraplanetary hearts of the stars.</p>
+    </article>
+    </div>
+    </section>
+    <section id ="getInTouch">
+        <h2>Get in Touch</h2>
+        <p>We woudl be happy to discuss how our company can meet your needs!</p>
+        <ul>
+            <li>Email:  sales@goodbusiness.com</li>
+            <li>Phone:  555-555-5555</li>
+        </ul>
+    </section>
+</main>
+<nav>
+    <a href="#aboutUs">About Us</a>
+    <a href="#ourProducts">Our Products</a>
+    <a href="#getInTouch">Get in Touch</a>
+</nav>
+<footer>
+    &copy; 2018 Code Business
+</footer>
 </body>
 </html>
