Finished but pictures could be resized

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <main>
     <section id ="aboutUs">
         <h2>About Us</h2>
-        <p>Sea of Tranquility Orion's sword stirred by starlight the sky calls to us Hypatia explorations. Realm of the galaxies Rig Veda paroxysm of global death made in the interiors of collapsing stars realm of the galaxies vastness is bearable only through love? Take root and flourish are creatures of the cosmos muse about something incredible is waiting to be known made in the interiors of collapsing stars are creatures of the cosmos.</p>
+ <p>Sea of Tranquility Orion's sword stirred by starlight the sky calls to us Hypatia explorations. Realm of the galaxies Rig Veda paroxysm of global death made in the interiors of collapsing stars realm of the galaxies vastness is bearable only through love? Take root and flourish are creatures of the cosmos muse about something incredible is waiting to be known made in the interiors of collapsing stars are creatures of the cosmos.</p>
     </section>
     <section id ="ourProducts">
         <h2>Our Products</h2>
         <p>Kindling the energy hidden in matter rich in mystery courage of our questions realm of the galaxies star stuff harvesting star light tingling of the spine? Bits of moving fluff the carbon in our apple pies stirred by starlight Rig Veda muse about a very small stage in a vast cosmic arena. A very small stage in a vast cosmic arena the sky calls to us inconspicuous motes of rock and gas concept of the number one invent the universe take root and flourish.</p>
-    <div id ="product">
+    <div id ="products">
         <article>
             <h3>Product A</h3>
             <img src="images\astronomy-3071312_960_720.jpg">
@@ -41,7 +41,7 @@
     </section>
     <section id ="getInTouch">
         <h2>Get in Touch</h2>
-        <p>We woudl be happy to discuss how our company can meet your needs!</p>
+        <p>We would be happy to discuss how our company can meet your needs!</p>
         <ul>
             <li>Email:  sales@goodbusiness.com</li>
             <li>Phone:  555-555-5555</li>
