--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-        <title>Code</title>
+        <title>Outer Space</title>
 
 <head>
     <meta charset="UTF-8">
